--- a/.travis.yml
+++ b/.travis.yml
@@ -7,34 +7,16 @@ cache:
 git:
   depth: false
   quiet: true
-addons:
-  apt:
-    sources:
-      - llvm-toolchain-trusty-5.0
-      - key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-    packages:
-      - python3-pip
-      - python3-wheel
-      - clang-format-5.0
 env:
   global:
-#    - ARDUINO_IDE_VERSION="1.8.10"
-     - PRETTYNAME="TEST"
-# Optional, will default to "$TRAVIS_BUILD_DIR/Doxyfile"
-#    - DOXYFILE: $TRAVIS_BUILD_DIR/Doxyfile
-
+     - ARDUINO_IDE_VERSION="1.8.7"
 before_install:
-   - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
-   - curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/run-clang-format.py > run-clang-format.py
-
-install:
-   - arduino --install-library "Adafruit ILI9341","Adafruit GFX Library"
-
+  - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
+#install:
+#  - arduino --install-library "Adafruit SleepyDog Library","Adafruit FONA Library"
 script:
-   - python run-clang-format.py -r .
-   - build_main_platforms
-
-# Generate and deploy documentation
-after_success:
-  - source <(curl -SLs  https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/library_check.sh)
-  - source <(curl -SLs  https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/doxy_gen_and_deploy.sh)
+  - build_main_platforms
+notifications:
+  email:
+    on_success: change
+    on_failure: change
